<resources>
    <string name="app_name">XECURE VoIP</string>
    <string name="service_name">XECURE VoIP Service</string>
    <string name="addressbook_label">XECURE VoIP</string>
    <string name="notification_title">XECURE VoIP</string>
    <string name="wait_dialog_text">Starting up</string>
    <string name="notification_registered">%s SECURELY ONLINE</string>
    <string name="notification_register_failure">%s ARE YOU CONNECTED?</string>
    <string name="tunnel_host"></string>
    <string name="about_version">0.0.7</string>
    <string name="about_liblinphone_version">0.0.7</string>
    <string name="about_text">GNU General Public License V2\n © 2010-2017 Belledonne Communications</string>
    <string name="about_link">www.linphone.org</string>
    <string name="sync_account_name">XECURE VoIP contacts</string>
    <string name="username">Username</string>
    <string name="userid">User-id (optional)</string>
    <string name="phone_number">PHONE / VoIP Number</string>
    <string name="display_name">Display name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password confirmation</string>
    <string name="domain">Domain</string>
    <string name="remote_provisioning_url">URL</string>
    <string name="email">Email</string>
    <string name="delete_text">Are you sure you want to delete your selection?</string>
    <string name="share_text">Are you sure you want to share your selection?</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="continue_text">Continue</string>
    <string name="about">About</string>
    <string name="deny">Deny</string>
    <string name="no_account">No account configured</string>
    <string name="search">Search</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="missed">Missed</string>
    <string name="settings">XECURE SETTINGS</string>
    <string name="connect">Connection</string>
    <string name="decline">Decline</string>
    <string name="conference">Conference</string>
    <string name="link">Link</string>
    <string name="link_account_popup">Do you want to link the account %s with your phone number ?</string>
    <string name="maybe_later">Maybe later</string>
    <string name="later">Later</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="link_account">Link your account</string>
    <string name="app_description">the <i>libre</i> SIP client</string>
    <string name="welcome">Welcome</string>
    <string name="assistant">XECURE VoIP</string>
    <string name="assistant_create_account">Create account</string>
    <string name="assistant_link_account">Link account</string>
    <string name="assistant_continue">Continue</string>
    <string name="assistant_activate">Activate your account</string>
    <string name="assistant_finish">Finish configuration</string>
    <string name="assistant_validate_account_1">Your account is created. Please check your mails to validate your account:</string>
    <string name="assistant_validate_account_2">Once it is done, come back here and click on the button.</string>
    <string name="assistant_welcome_desc">To configure your XECURE VoIP account press on this button. \n \n By using this application you agree on the terms and conditions of XECURE VoIP which can be found on the XECURE.ME website.\n \n For service or support contact your local XECURE partner.\n \n Configure your XECURE VoIP account:</string>
    <string name="assistant_linphone_login_desc">Please enter your username and password of VoIpXecure account</string>
    <string name="assistant_login_desc">Please enter your username and password with your VoIpXecure domain</string>
    <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
    <string name="transport">Transport</string>
    <string name="assistant_create_account_phone_number_address">Your SIP address is</string>
    <string name="assistant_login_linphone">Use Linphone account</string>
    <string name="assistant_login_generic">SETUP XECURE VoIP ACCOUNT</string>
    <string name="assistant_remote_provisioning">Fetch remote configuration</string>
    <string name="assistant_create_account_part_1">Please confirm your country code and enter your phone number</string>
    <string name="assistant_create_account_part_2">We have sent you a SMS with a validation code to your phone number:</string>
    <string name="assistant_create_account_part_3">To complete your phone number verification, please enter the 4 digit code below:\n</string>
    <string name="assistant_create_account_part_email">Please enter an username, email and password for your Linphone account</string>
    <string name="assistant_display_name_optional">Display name (optional)</string>
    <string name="assistant_linphone_account">Use your Linphone account</string>
    <string name="assistant_generic_account">Use SIP account</string>
    <string name="assistant_remote_provisioning_title">Fetch remote configuration</string>
    <string name="assistant_fetch_apply">Fetch and apply</string>
    <string name="assistant_login">CONFIGURE XECURE VoIP</string>
    <string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
    <string name="assistant_remote_provisioning_login">Enter your login</string>
    <string name="assistant_account_not_validated">Your account has not been validated yet.</string>
    <string name="assistant_error_confirmation_code">The confirmation code is invalid.\r\nPlease try again.</string>
    <string name="assistant_account_validated">Your account has been validated.</string>
    <string name="assistant_error_bad_credentials">Incorrect username or password</string>
    <string name="assistant_codec_down_question">Do you agree to download OpenH264 Video Codec provided by Cisco Systems, Inc.?</string>
    <string name="assistant_codec_downloading">Downloading OpenH264 Video Codec provided by Cisco Systems, Inc.</string>
    <string name="assistant_openh264_downloading">Downloading OpenH264</string>
    <string name="assistant_openh264_restart">Before use OpenH264 codec you must restart %s.</string>
    <string name="assistant_openh264_error">Sorry an error has occurred.</string>
    <string name="assistant_codec_downloaded">OpenH264 Video Codec provided by Cisco Systems, Inc. downloaded.</string>
    <string name="wizard_failed">An error occurred, try again later.</string>
    <string name="wizard_server_unavailable">Server unreachable, verify your network connection.</string>
    <string name="wizard_username_unavailable">This username is already in use.</string>
    <string name="assistant_phone_number_unavailable">This phone number is already in used.\r\nPlease type a different number.\r\nYou can delete your existing account if you want to reuse your phone number.</string>
    <string name="wizard_username_incorrect">Your username is invalid.</string>
    <string name="assistant_phone_number_incorrect">Your phone number is invalid.</string>
    <string name="wizard_email_incorrect">Your email is invalid.</string>
    <string name="wizard_password_incorrect">Your password is invalid</string>
    <string name="wizard_passwords_unmatched">Passwords do not match.</string>
    <string name="setup_confirm_username">Your username will be %s.\r\n\r\nIt may differ from your input to match requirements.\r\nDo you accept?</string>
    <string name="first_launch_no_login_password">Please enter your login and password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="assistant_choose_country">Choose a country</string>
    <string name="select_your_country">Select your Country</string>
    <string name="country_code">(%s)</string>
    <string name="use_username_instead_or_phone_number">Use a username (optional)</string>
    <string name="use_email_for_validation">Use email address for account validation</string>
    <string name="login_with_username">Use your username and password instead of your phone number</string>
    <string name="phone_number_info_title">What will my phone number be used for?</string>
    <string name="phone_number_info_content">\nThanks to your phone number, your friends will find you more easily.\n\n You will see in your address book who is using Linphone and your friends will know that they can rach you on Linphone as well.\n</string>
    <string name="phone_number_link_info_content">\nYour friends will find you more easily if you link your account to your phone number\n\nYou will see in your address book who is using Linphone and your friends will know that they can reach you on Linphone as well.\n</string>
    <string name="phone_number_link_info_content_already_account">You can only use your phone number with one Linphone account.\n\nIf you had already linked your number to an other account but you prefer to use this one, simply link it now and your number will automatically be moved to this account.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="account_already_exist">Account already exist</string>
    <string name="phone_number_not_exist">This account does not exist</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_domain">Invalid domain</string>
    <string name="invalid_route">Invalid route</string>
    <string name="invalid_display_name">Invalid display name</string>
    <string name="username_too_short">Username too short</string>
    <string name="username_too_long">Username too long</string>
    <string name="username_invalid_size">Username length invalid</string>
    <string name="phone_number_too_long">Phone number too long</string>
    <string name="phone_number_too_short">Phone number too short</string>
    <string name="phone_number_invalid">Invalid phone number</string>
    <string name="password_too_short">Password too short</string>
    <string name="password_too_long">Password too long</string>
    <string name="request_failed">Failed to query the server. Please try again later</string>
    <string name="transport_unsupported">Unsupported transport</string>
    <string name="country_code_invalid">Country code invalid</string>
    <string name="contact_department">Department</string>
    <string name="contact_company">Company</string>
    <string name="contact_sub_department">Sub Department</string>
    <string name="menu_security">Setting Security</string>
    <string name="content_description_back">Back</string>
    <string name="content_description_dialer_back">Return to dialer</string>
    <string name="content_description_search_contact">Search contact</string>
    <string name="content_description_deselect_all">Deselect all</string>
    <string name="content_description_select_all">Select all</string>
    <string name="content_description_contact_company_name">Company name</string>
    <string name="content_description_contact_department_name">Department name</string>
    <string name="content_description_contact_sub_department_name">Sub Department name</string>
    <string name="asterisk_password">PASSWORD</string>
    <string name="asterisk_confirm_password">CONFIRM PASSWORD</string>
    <string name="set_app_pass">Configurate your XECURE VoIP \nLOGIN-Security And Privacy Password:</string>
    <string name="set_app_security">Configurate your XECURE VoIP \nLOGIN-Security And Privacy Security:</string>
    <string name="set_app_pattern_alert_least">Connect at least 4 dots, try again.</string>
    <string name="import_contacts_error">No related contacts.</string>
    <string name="import_contacts_success">Import Success.</string>
    <string name="import_contacts_failed">Already Imported</string>
</resources>