<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.XECUREVoIP.contacts.ImportContactsActivity">
    <RelativeLayout
        android:background="@color/colorH"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.XECUREVoIP.contacts.ImportContactsActivity">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/splash_bk_transparent"/>
        <fragment
            android:id="@+id/status"
            android:name="com.XECUREVoIP.StatusFragment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:layout="@layout/status"/>

        <LinearLayout
            android:id="@+id/topbar"
            android:layout_below="@+id/status"
            android:background="@color/colorF"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/back"
                android:src="@drawable/back"
                android:background="@drawable/toolbar_button"
                android:contentDescription="@string/content_description_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:padding="18dp"/>

            <TextView
                android:id="@+id/title"
                android:text="Download"
                style="@style/font1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/id_btnImport"
                android:src="@drawable/download_contact_button"
                android:background="@drawable/toolbar_button"
                android:contentDescription="@string/content_description_dialer_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:padding="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/key_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topbar"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/gen_layout_margin">
            <TextView
                android:text="@string/contact_company"
                style="@style/font13"
                android:textAllCaps="true"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <AutoCompleteTextView
                android:id="@+id/contactCompany"
                android:textCursorDrawable="@null"
                style="@style/font6"
                android:contentDescription="@string/content_description_contact_company_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left"
                android:paddingRight="5dp"
                android:imeActionLabel="Done"
                android:inputType="textPersonName"/>
            <TextView
                android:text="@string/contact_department"
                style="@style/font13"
                android:textAllCaps="true"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <AutoCompleteTextView
                android:id="@+id/contactDepartment"
                android:textCursorDrawable="@null"
                style="@style/font6"
                android:contentDescription="@string/content_description_contact_department_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:imeActionLabel="Done"
                android:gravity="left"
                android:paddingRight="5dp"
                android:inputType="textPersonName"/>
            <TextView
                android:text="@string/contact_sub_department"
                style="@style/font13"
                android:textAllCaps="true"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <AutoCompleteTextView
                android:id="@+id/contactSubDepartment"
                android:textCursorDrawable="@null"
                style="@style/font6"
                android:contentDescription="@string/content_description_contact_sub_department_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:imeActionLabel="Done"
                android:gravity="left"
                android:paddingRight="5dp"
                android:inputType="textPersonName"/>
        </LinearLayout>
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/progress"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:indicatorName="BallClipRotatePulseIndicator"
            app:indicatorColor="@color/notification_color_led"
            android:layout_below="@+id/key_container"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            />
        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_contacts_error"
            android:layout_below="@+id/key_container"
            android:layout_centerHorizontal="true"
            style="@style/font27"
            android:visibility="invisible"
            android:layout_marginBottom="40dp"/>
        <TextView
            android:id="@+id/success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_contacts_success"
            android:layout_below="@+id/key_container"
            android:layout_centerHorizontal="true"
            style="@style/font26"
            android:visibility="invisible"
            android:layout_marginBottom="40dp"/>
        <TextView
            android:id="@+id/failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_contacts_failed"
            android:layout_below="@+id/key_container"
            android:layout_centerHorizontal="true"
            style="@style/font26"
            android:layout_marginBottom="40dp"
            android:visibility="invisible"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
