<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorH"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.XECUREVoIP.security.changeSecurity.ChangeSecurityActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            style="@style/font8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/set_app_security"/>
        <Button
            android:id="@+id/id_btnSecure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SET SECURIRY"
            style="@style/detail_label"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/assistant_button"
            android:textColor="@drawable/assistant_button_text_color" />
    </LinearLayout>
    <fragment
        android:id="@+id/status"
        android:name="com.XECUREVoIP.StatusFragment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:layout="@layout/status"/>

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_below="@+id/status"
        android:background="@color/colorF"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/back"
            android:src="@drawable/back"
            android:background="@drawable/toolbar_button"
            android:contentDescription="@string/content_description_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:visibility="invisible"
            android:padding="18dp"/>

        <TextView
            android:id="@+id/title"
            android:text="@string/menu_security"
            style="@style/font1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/cancel"
            android:src="@drawable/dialer_back"
            android:background="@drawable/toolbar_button"
            android:contentDescription="@string/content_description_dialer_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:padding="15dp"/>
    </LinearLayout>
    <com.XECUREVoIP.security.MySwipeableViewPager
        android:id="@+id/container"
        android:layout_below="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
