<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.XECUREVoIP.contacts.ExportContactsActivity">
    <RelativeLayout
        android:background="@color/colorH"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.XECUREVoIP.contacts.ImportContactsActivity">
        <fragment
            android:id="@+id/status"
            android:name="com.XECUREVoIP.StatusFragment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:layout="@layout/status"/>

        <LinearLayout
            android:id="@+id/topbar"
            android:layout_below="@+id/status"
            android:background="@color/colorF"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/back"
                android:src="@drawable/back"
                android:background="@drawable/toolbar_button"
                android:contentDescription="@string/content_description_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:padding="18dp"/>

            <TextView
                android:id="@+id/title"
                android:text="Upload"
                style="@style/font1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2">
                <ImageView
                    android:id="@+id/select_all"
                    android:src="@drawable/select_all"
                    android:background="@drawable/toolbar_button"
                    android:contentDescription="@string/content_description_select_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="18dp"/>
                <ImageView
                    android:id="@+id/deselect_all"
                    android:src="@drawable/deselect_all"
                    android:background="@drawable/toolbar_button"
                    android:contentDescription="@string/content_description_deselect_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:padding="18dp"/>
            </RelativeLayout>
            <ImageView
                android:id="@+id/upload"
                android:src="@drawable/upload_contact_button"
                android:background="@drawable/toolbar_button"
                android:contentDescription="@string/content_description_dialer_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:padding="10dp"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/id_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topbar"
            android:layout_margin="10dp">

            <EditText
                android:contentDescription="@string/content_description_search_contact"
                android:textCursorDrawable="@null"
                android:id="@+id/searchField"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@android:color/black"
                android:background="@drawable/resizable_textfield"
                android:gravity="center"
                android:paddingRight="5dp"
                android:inputType="textPersonName"/>

            <ImageView
                android:id="@+id/clearSearchField"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/clean_field_default"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

        </RelativeLayout>
        <ListView
            android:id="@+id/contactsList"
            android:layout_width="match_parent"
            android:layout_below="@+id/id_find"
            android:layout_height="match_parent"
            android:divider="@color/colorE"
            android:fastScrollEnabled="true"
            android:fastScrollAlwaysVisible="true"
            android:dividerHeight="1dp" />
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/progress"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:indicatorName="BallClipRotatePulseIndicator"
            app:indicatorColor="@color/notification_color_led"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
